Making sure the logger is configured and upgrading to gradle 7